matroskaenc: remove MATROSKA_ID_VIDEODISPLAYUNIT 3

Should fix ticket 1754

Thanks-to: Moritz Bunkus <moritz@bunkus.org>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>